tests/snapshots/formats__chm__help.chm.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ help.chm — Compiled HTML Help, 1 directory chunks, language 0x0409  [0x0+0x1151]
  ▾ Header  [0x0+0x58]
      Signature: "ITSF"  [0x0+0x4]
      Version: 3  [0x4+0x4]
      Header length: 0x60  [0x8+0x4]
      Unknown: 1  [0xc+0x4]
      Timestamp: 0x12345678  [0x10+0x4]
      Language ID: 0x409  [0x14+0x4]
      GUID 1: {7c01fd10-7baa-11d0-9e0c-00a0c922e6ec}  [0x18+0x10]
      GUID 2: {7c01fd11-7baa-11d0-9e0c-00a0c922e6ec}  [0x28+0x10]
      Section 0 offset: 0x60  [0x38+0x8]
      Section 0 length: 24  [0x40+0x8]
      Directory offset: 0x78  [0x48+0x8]
      Directory length: 4180  [0x50+0x8]
    Content offset: 0x10cc  [0x58+0x8]
    Section 0 (file size)  [0x60+0x18]
  ▾ Directory header  [0x78+0x54]
      Signature: "ITSP"  [0x78+0x4]
      Version: 1  [0x7c+0x4]
      Header length: 0x54  [0x80+0x4]
      Unknown: 10  [0x84+0x4]
      Chunk size: 0x1000  [0x88+0x4]
      Quickref density: 2  [0x8c+0x4]
      Index depth: 1  [0x90+0x4]
      Root index chunk: -1  [0x94+0x4]
      First listing chunk: 0  [0x98+0x4]
      Last listing chunk: 0  [0x9c+0x4]
      Unknown: -1  [0xa0+0x4]
      Number of chunks: 1  [0xa4+0x4]
      Language ID: 0x409  [0xa8+0x4]
      GUID: {5d02926a-212e-11d0-9df9-00a0c922e6ec}  [0xac+0x10]
      Header length (again): 0x54  [0xbc+0x4]
      Unknown: ff ff ff ff ff ff ff ff ff ff ff ff  |............|  [0xc0+0xc]
  ▾ Files  [0xcc+0x1000]
      /: 0 — section 0, offset 0x0  [0xe0+0x5]
    ▾ /#SYSTEM: 19 — section 0, offset 0x0  [0x10cc+0x13] → 0xe5+0xc
        Data  [0x10cc+0x13]
    ▾ /compressed.html: 1234 — section 1 (LZX), offset 0x0  [0xf1+0x15]
        ! malformed: no LZX control data, content or reset table
    ▾ /index.html: 80 — HTML document: Fixture  [0x10df+0x50] → 0x106+0xf
      ▾ html — 2 elements  [0x10df+0x4f]
        ▾ head — 1 element  [0x10e5+0x23]
            title: "Fixture"  [0x10eb+0x16]
        ▾ body — 1 element  [0x1108+0x1f]
            h1: "fillyfoal"  [0x110e+0x12]
    ▾ /style.css: 34 — UTF-8 text, LF line endings, 1 line  [0x112f+0x22] → 0x115+0xe
        Encoding: "UTF-8"
        Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
      ▾ Lines — 1 line  [0x112f+0x22]
          Line 1: "body { font-family: sans-serif; }"  [0x112f+0x21]
      ::DataSpace/Storage/MSCompressed/Content: 0 — section 0, offset 0x85  [0x123+0x2d]
  ▾ Compressed section — MSCompressed, LZX  [0x10cc+0x85]
      ! malformed: no LZX control data, content or reset table
    Content — 133 bytes  [0x10cc+0x85]
