tests/snapshots/formats__chm__lzx.chm.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ lzx.chm — Compiled HTML Help, 1 directory chunks, language 0x0409  [0x0+0x1234]
  ▾ Header  [0x0+0x58]
      Signature: "ITSF"  [0x0+0x4]
      Version: 3  [0x4+0x4]
      Header length: 0x60  [0x8+0x4]
      Unknown: 1  [0xc+0x4]
      Timestamp: 0x12345678  [0x10+0x4]
      Language ID: 0x409  [0x14+0x4]
      GUID 1: {7c01fd10-7baa-11d0-9e0c-00a0c922e6ec}  [0x18+0x10]
      GUID 2: {7c01fd11-7baa-11d0-9e0c-00a0c922e6ec}  [0x28+0x10]
      Section 0 offset: 0x60  [0x38+0x8]
      Section 0 length: 24  [0x40+0x8]
      Directory offset: 0x78  [0x48+0x8]
      Directory length: 4180  [0x50+0x8]
    Content offset: 0x10cc  [0x58+0x8]
    Section 0 (file size)  [0x60+0x18]
  ▾ Directory header  [0x78+0x54]
      Signature: "ITSP"  [0x78+0x4]
      Version: 1  [0x7c+0x4]
      Header length: 0x54  [0x80+0x4]
      Unknown: 10  [0x84+0x4]
      Chunk size: 0x1000  [0x88+0x4]
      Quickref density: 2  [0x8c+0x4]
      Index depth: 1  [0x90+0x4]
      Root index chunk: -1  [0x94+0x4]
      First listing chunk: 0  [0x98+0x4]
      Last listing chunk: 0  [0x9c+0x4]
      Unknown: -1  [0xa0+0x4]
      Number of chunks: 1  [0xa4+0x4]
      Language ID: 0x409  [0xa8+0x4]
      GUID: {5d02926a-212e-11d0-9df9-00a0c922e6ec}  [0xac+0x10]
      Header length (again): 0x54  [0xbc+0x4]
      Unknown: ff ff ff ff ff ff ff ff ff ff ff ff  |............|  [0xc0+0xc]
  ▾ Files  [0xcc+0x1000]
      /: 0 — section 0, offset 0x0  [0xe0+0x5]
    ▾ /about.html: 158 — HTML document  [0xe5+0x10]
      ▾ html — 1 element  [#1:0x7a+0x9e]
          body: "About this help file. About this help file. About this help file. About this help file. About this help file. About this help file."  [#1:0x80+0x91]
    ▾ /index.html: 122 — HTML document  [0xf5+0xf]
      ▾ html — 1 element  [#1:0x0+0x7a]
          body: "Index page. Index page. Index page. Index page. Index page. Index page. Index page. Index page."  [#1:0x6+0x6d]
    ▾ ::DataSpace/NameList: 60 — section 0, offset 0x0  [0x10cc+0x3c] → 0x104+0x18
        Data  [0x10cc+0x3c]
    ▾ ::DataSpace/Storage/MSCompressed/Content: 200 — section 0, offset 0x58  [0x1124+0xc8] → 0x11c+0x2d
        Data  [0x1124+0xc8]
    ▾ ::DataSpace/Storage/MSCompressed/ControlData: 28 — section 0, offset 0x3c  [0x1108+0x1c] → 0x149+0x30
        Data  [0x1108+0x1c]
    ▾ ::DataSpace/Storage/MSCompressed/SpanInfo: 8 — section 0, offset 0x120  [0x11ec+0x8] → 0x179+0x2e
        Data  [0x11ec+0x8]
    ▾ ::DataSpace/Storage/MSCompressed/Transform/List: 16 — section 0, offset 0x128  [0x11f4+0x10] → 0x1a7+0x34
        Data  [0x11f4+0x10]
    ▾ ::DataSpace/Storage/MSCompressed/Transform/{7FC28940-9D31-11D0-9B27-00A0C91E9C7C}/InstanceData/ResetTable: 48 — section 0, offset 0x138  [0x1204+0x30] → 0x1db+0x6e
        Data  [0x1204+0x30]
  ▾ Compressed section — HTML document  [0x10cc+0x168]
    ▾ html — 1 element  [#1:0x0+0x7a]
        body: "Index page. Index page. Index page. Index page. Index page. Index page. Index page. Index page."  [#1:0x6+0x6d]
    ▾ html — 1 element  [#1:0x7a+0x9e]
        body: "About this help file. About this help file. About this help file. About this help file. About this help file. About this help file."  [#1:0x80+0x91]
    Content — 360 bytes  [0x10cc+0x168]
